ArchivosANTLR/Grupo11Parser.java
// Generated from C:/Users/Personal/Desktop/UNI/Curso 4/Segundo Cuatri/PL/Practicas/Obligatoria/PracticaGrupo11PL/src/Grupo11.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class Grupo11Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		PROGRAM_KW=25, END_KW=26, INTERFACE_KW=27, SUBROUTINE_KW=28, FUNCTION_KW=29, 
		PARAMETER_KW=30, INTENT_KW=31, CALL_KW=32, INTEGER_KW=33, REAL_KW=34, 
		CHARACTER_KW=35, IN_KW=36, OUT_KW=37, INOUT_KW=38, IF_KW=39, THEN_KW=40, 
		ELSE_KW=41, ENDIF_KW=42, DO_KW=43, WHILE_KW=44, ENDDO_KW=45, SELECT_KW=46, 
		CASE_KW=47, DEFAULT_KW=48, NUM_INT_CONST_B=49, NUM_INT_CONST_O=50, NUM_INT_CONST_H=51, 
		STRING_CONST=52, NUM_REAL_CONST=53, NUM_INT_CONST=54, IDENT=55, COMMENT=56, 
		WS=57;
	public static final int
		RULE_prog = 0, RULE_dcllist = 1, RULE_dcl = 2, RULE_ctelist = 3, RULE_simpvalue = 4, 
		RULE_varlist = 5, RULE_varlistRest = 6, RULE_init = 7, RULE_tipo = 8, 
		RULE_charlength = 9, RULE_cabecera = 10, RULE_cablist = 11, RULE_cablistRest = 12, 
		RULE_decsubprog = 13, RULE_decproc = 14, RULE_formal_paramlist = 15, RULE_nomparamlist = 16, 
		RULE_nomparamlistRest = 17, RULE_dec_d_paramlist = 18, RULE_dec_s_paramlist = 19, 
		RULE_tipoparam = 20, RULE_decfun = 21, RULE_dec_f_paramlist = 22, RULE_sentlist = 23, 
		RULE_sentlistRest = 24, RULE_sent = 25, RULE_doval = 26, RULE_expcond = 27, 
		RULE_expcondRest = 28, RULE_oplog = 29, RULE_factorcond = 30, RULE_opcomp = 31, 
		RULE_casos = 32, RULE_etiquetas = 33, RULE_listaetiquetas = 34, RULE_exp = 35, 
		RULE_expRest = 36, RULE_op = 37, RULE_factor = 38, RULE_explist = 39, 
		RULE_proc_call = 40, RULE_subpparamlist = 41, RULE_subproglist = 42, RULE_subprog = 43, 
		RULE_codproc = 44, RULE_codfun = 45;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "dcllist", "dcl", "ctelist", "simpvalue", "varlist", "varlistRest", 
			"init", "tipo", "charlength", "cabecera", "cablist", "cablistRest", "decsubprog", 
			"decproc", "formal_paramlist", "nomparamlist", "nomparamlistRest", "dec_d_paramlist", 
			"dec_s_paramlist", "tipoparam", "decfun", "dec_f_paramlist", "sentlist", 
			"sentlistRest", "sent", "doval", "expcond", "expcondRest", "oplog", "factorcond", 
			"opcomp", "casos", "etiquetas", "listaetiquetas", "exp", "expRest", "op", 
			"factor", "explist", "proc_call", "subpparamlist", "subproglist", "subprog", 
			"codproc", "codfun"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "','", "'::'", "'='", "'.TRUE.'", "'.FALSE.'", "'('", "')'", 
			"'.OR.'", "'.AND.'", "'.EQV.'", "'.NEQV.'", "'.NOT.'", "'<'", "'>'", 
			"'<='", "'>='", "'=='", "'/='", "':'", "'+'", "'-'", "'*'", "'/'", "'PROGRAM'", 
			"'END'", "'INTERFACE'", "'SUBROUTINE'", "'FUNCTION'", "'PARAMETER'", 
			"'INTENT'", "'CALL'", "'INTEGER'", "'REAL'", "'CHARACTER'", "'IN'", "'OUT'", 
			"'INOUT'", "'IF'", "'THEN'", "'ELSE'", "'ENDIF'", "'DO'", "'WHILE'", 
			"'ENDDO'", "'SELECT'", "'CASE'", "'DEFAULT'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "PROGRAM_KW", "END_KW", "INTERFACE_KW", "SUBROUTINE_KW", "FUNCTION_KW", 
			"PARAMETER_KW", "INTENT_KW", "CALL_KW", "INTEGER_KW", "REAL_KW", "CHARACTER_KW", 
			"IN_KW", "OUT_KW", "INOUT_KW", "IF_KW", "THEN_KW", "ELSE_KW", "ENDIF_KW", 
			"DO_KW", "WHILE_KW", "ENDDO_KW", "SELECT_KW", "CASE_KW", "DEFAULT_KW", 
			"NUM_INT_CONST_B", "NUM_INT_CONST_O", "NUM_INT_CONST_H", "STRING_CONST", 
			"NUM_REAL_CONST", "NUM_INT_CONST", "IDENT", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grupo11.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Grupo11Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public List<TerminalNode> PROGRAM_KW() { return getTokens(Grupo11Parser.PROGRAM_KW); }
		public TerminalNode PROGRAM_KW(int i) {
			return getToken(Grupo11Parser.PROGRAM_KW, i);
		}
		public List<TerminalNode> IDENT() { return getTokens(Grupo11Parser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(Grupo11Parser.IDENT, i);
		}
		public DcllistContext dcllist() {
			return getRuleContext(DcllistContext.class,0);
		}
		public CabeceraContext cabecera() {
			return getRuleContext(CabeceraContext.class,0);
		}
		public SentlistContext sentlist() {
			return getRuleContext(SentlistContext.class,0);
		}
		public TerminalNode END_KW() { return getToken(Grupo11Parser.END_KW, 0); }
		public SubproglistContext subproglist() {
			return getRuleContext(SubproglistContext.class,0);
		}
		public TerminalNode EOF() { return getToken(Grupo11Parser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Grupo11Visitor ) return ((Grupo11Visitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(PROGRAM_KW);
			setState(93);
			match(IDENT);
			setState(94);
			match(T__0);
			setState(95);
			dcllist();
			setState(96);
			cabecera();
			setState(97);
			sentlist();
			setState(98);
			match(END_KW);
			setState(99);
			match(PROGRAM_KW);
			setState(100);
			match(IDENT);
			setState(101);
			subproglist();
			setState(102);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DcllistContext extends ParserRuleContext {
		public DclContext dcl() {
			return getRuleContext(DclContext.class,0);
		}
		public DcllistContext dcllist() {
			return getRuleContext(DcllistContext.class,0);
		}
		public DcllistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcllist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).enterDcllist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).exitDcllist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Grupo11Visitor ) return ((Grupo11Visitor<? extends T>)visitor).visitDcllist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DcllistContext dcllist() throws RecognitionException {
		DcllistContext _localctx = new DcllistContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dcllist);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTERFACE_KW:
			case CALL_KW:
			case IF_KW:
			case DO_KW:
			case SELECT_KW:
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case INTEGER_KW:
			case REAL_KW:
			case CHARACTER_KW:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				dcl();
				setState(106);
				dcllist();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DclContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode PARAMETER_KW() { return getToken(Grupo11Parser.PARAMETER_KW, 0); }
		public TerminalNode IDENT() { return getToken(Grupo11Parser.IDENT, 0); }
		public SimpvalueContext simpvalue() {
			return getRuleContext(SimpvalueContext.class,0);
		}
		public CtelistContext ctelist() {
			return getRuleContext(CtelistContext.class,0);
		}
		public VarlistContext varlist() {
			return getRuleContext(VarlistContext.class,0);
		}
		public DclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).enterDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).exitDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Grupo11Visitor ) return ((Grupo11Visitor<? extends T>)visitor).visitDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclContext dcl() throws RecognitionException {
		DclContext _localctx = new DclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dcl);
		try {
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				tipo();
				setState(111);
				match(T__1);
				setState(112);
				match(PARAMETER_KW);
				setState(113);
				match(T__2);
				setState(114);
				match(IDENT);
				setState(115);
				match(T__3);
				setState(116);
				simpvalue();
				setState(117);
				ctelist();
				setState(118);
				match(T__0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				tipo();
				setState(121);
				match(T__2);
				setState(122);
				varlist();
				setState(123);
				match(T__0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CtelistContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(Grupo11Parser.IDENT, 0); }
		public SimpvalueContext simpvalue() {
			return getRuleContext(SimpvalueContext.class,0);
		}
		public CtelistContext ctelist() {
			return getRuleContext(CtelistContext.class,0);
		}
		public CtelistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ctelist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).enterCtelist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).exitCtelist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Grupo11Visitor ) return ((Grupo11Visitor<? extends T>)visitor).visitCtelist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CtelistContext ctelist() throws RecognitionException {
		CtelistContext _localctx = new CtelistContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ctelist);
		try {
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				match(T__1);
				setState(129);
				match(IDENT);
				setState(130);
				match(T__3);
				setState(131);
				simpvalue();
				setState(132);
				ctelist();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpvalueContext extends ParserRuleContext {
		public TerminalNode NUM_INT_CONST() { return getToken(Grupo11Parser.NUM_INT_CONST, 0); }
		public TerminalNode NUM_REAL_CONST() { return getToken(Grupo11Parser.NUM_REAL_CONST, 0); }
		public TerminalNode STRING_CONST() { return getToken(Grupo11Parser.STRING_CONST, 0); }
		public TerminalNode NUM_INT_CONST_B() { return getToken(Grupo11Parser.NUM_INT_CONST_B, 0); }
		public TerminalNode NUM_INT_CONST_O() { return getToken(Grupo11Parser.NUM_INT_CONST_O, 0); }
		public TerminalNode NUM_INT_CONST_H() { return getToken(Grupo11Parser.NUM_INT_CONST_H, 0); }
		public SimpvalueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpvalue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).enterSimpvalue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).exitSimpvalue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Grupo11Visitor ) return ((Grupo11Visitor<? extends T>)visitor).visitSimpvalue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpvalueContext simpvalue() throws RecognitionException {
		SimpvalueContext _localctx = new SimpvalueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_simpvalue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 35465847065542752L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarlistContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(Grupo11Parser.IDENT, 0); }
		public InitContext init() {
			return getRuleContext(InitContext.class,0);
		}
		public VarlistRestContext varlistRest() {
			return getRuleContext(VarlistRestContext.class,0);
		}
		public VarlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).enterVarlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).exitVarlist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Grupo11Visitor ) return ((Grupo11Visitor<? extends T>)visitor).visitVarlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarlistContext varlist() throws RecognitionException {
		VarlistContext _localctx = new VarlistContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varlist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(IDENT);
			setState(139);
			init();
			setState(140);
			varlistRest();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarlistRestContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(Grupo11Parser.IDENT, 0); }
		public InitContext init() {
			return getRuleContext(InitContext.class,0);
		}
		public VarlistRestContext varlistRest() {
			return getRuleContext(VarlistRestContext.class,0);
		}
		public VarlistRestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varlistRest; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).enterVarlistRest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).exitVarlistRest(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Grupo11Visitor ) return ((Grupo11Visitor<? extends T>)visitor).visitVarlistRest(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarlistRestContext varlistRest() throws RecognitionException {
		VarlistRestContext _localctx = new VarlistRestContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varlistRest);
		try {
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				match(T__1);
				setState(144);
				match(IDENT);
				setState(145);
				init();
				setState(146);
				varlistRest();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InitContext extends ParserRuleContext {
		public SimpvalueContext simpvalue() {
			return getRuleContext(SimpvalueContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).exitInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Grupo11Visitor ) return ((Grupo11Visitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_init);
		try {
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				match(T__3);
				setState(152);
				simpvalue();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TerminalNode INTEGER_KW() { return getToken(Grupo11Parser.INTEGER_KW, 0); }
		public TerminalNode REAL_KW() { return getToken(Grupo11Parser.REAL_KW, 0); }
		public TerminalNode CHARACTER_KW() { return getToken(Grupo11Parser.CHARACTER_KW, 0); }
		public CharlengthContext charlength() {
			return getRuleContext(CharlengthContext.class,0);
		}
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).exitTipo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Grupo11Visitor ) return ((Grupo11Visitor<? extends T>)visitor).visitTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_tipo);
		try {
			setState(159);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER_KW:
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				match(INTEGER_KW);
				}
				break;
			case REAL_KW:
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				match(REAL_KW);
				}
				break;
			case CHARACTER_KW:
				enterOuterAlt(_localctx, 3);
				{
				setState(157);
				match(CHARACTER_KW);
				setState(158);
				charlength();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CharlengthContext extends ParserRuleContext {
		public TerminalNode NUM_INT_CONST() { return getToken(Grupo11Parser.NUM_INT_CONST, 0); }
		public CharlengthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_charlength; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).enterCharlength(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Grupo11Listener ) ((Grupo11Listener)listener).exitCharlength(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Grupo11Visitor ) return ((Grupo11Visitor<? extends T>)visitor).visitCharlength(this);
			else return visitor.visitChildren(this);
		}
	}
